schema/testdata/errors/reserved_task_names.keel
//expect-error:6:11:NamingError:Reserved name 'Query'
task Query {
}